Fri Jan  9 15:45:33 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/Documentation/Build.html:

	  Added some clarifications suggested by Tao Lu.

Fri Jan  9 14:46:41 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CCF/CCF/CIDL/CIDL.vcproj:
        * CCF/CCF/CodeGenerationKit/CodeGenerationKit.vcproj:
        * CCF/CCF/IDL2/IDL2.vcproj:

          Added new files for union support and updated other project
          settings.

        * CIDLC/ServantSourceGenerator.cpp:
        * CIDLC/izeTypeCalculator.cpp:
        * CIDLC/TypeNameEmitter.cpp:
        * CIDLC/TypeNameEmitter.hpp:

          Added support for unions to the back end, and fixed a bug in
          generating the servant name when the component is declared at
          file scope.

Fri Jan  9 12:25:37 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/CCF/IDL2/SemanticAction/Impl/Union.cpp:
	* CCF/CCF/IDL2/SemanticAction/Impl/Union.hpp:

	  Fixed a bug with union member handling in semantic
	  actions.

Fri Jan  9 12:20:32 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/Config.rules:
	* CCF/Makefile.alt:
	* CCF/CCF/Makefile.alt:
	* CCF/CCF/CIDL/Makefile.alt:
	* CCF/CCF/CIDL/Makefile.archive:
	* CCF/CCF/CIDL/SemanticAction/Makefile.alt:
	* CCF/CCF/CIDL/SemanticAction/Makefile.object:
	* CCF/CCF/CIDL/SemanticAction/Impl/Makefile.alt:
	* CCF/CCF/CIDL/SemanticGraph/Makefile.alt:
	* CCF/CCF/CIDL/Traversal/Makefile.alt:
	* CCF/CCF/CodeGenerationKit/Makefile.alt:
	* CCF/CCF/CompilerElements/Makefile.alt:
	* CCF/CCF/IDL2/Makefile.alt:
	* CCF/CCF/IDL2/Makefile.archive:
	* CCF/CCF/IDL2/SemanticAction/Makefile.alt:
	* CCF/CCF/IDL2/SemanticAction/Makefile.object:
	* CCF/CCF/IDL2/SemanticAction/Impl/Makefile.alt:
	* CCF/CCF/IDL2/SemanticGraph/Makefile.alt:
	* CCF/CCF/IDL2/Traversal/Makefile.alt:
	* CCF/CCF/IDL3/Makefile.alt:
	* CCF/CCF/IDL3/Makefile.archive:
	* CCF/CCF/IDL3/SemanticAction/Makefile.alt:
	* CCF/CCF/IDL3/SemanticAction/Impl/Makefile.alt: