@@ -1,3 +1,11 @@
+Fri Jan  9 16:01:55 2004  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * CIDLC/cidlc.cpp:
+        
+          Changed the error return value from -1 to 1. For some reason,
+          Visual Studio does not detect the -1 return value and thinks
+          everything is fine.
+
 Fri Jan  9 15:45:33 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>
 
 	* CCF/Documentation/Build.html:
